# redes_udec

./: README.md
c_crypto/: CMakeLists.txt  README.md
c_crypto/src/: util.c
lab1-2_rtt/: CMakeLists.txt  README.md
lab1-2_rtt/c/: README.md
lab1-2_rtt/c/include/: rudp.h
lab1-2_rtt/c/src/: rtt.c  rudp.c  server.c  udp.c
lab1-2_rtt/include/: rtt.h  udp.h
lab1-2_rtt/python/: client.py  rudp.py  server.py
lab1-2_rtt/src/: client.c
lab1_skel/: tcp.h
lab1_skel/src/: server.c
lab1_udp/: CMakeLists.txt
lab1_udp/include/: udp.h
lab1_udp/src/: client.c  server.c  udp.c
lab2/: CMakeLists.txt
lab2/include/: udp.h
lab2/src/: client.c  server.c  udp.c
labev1_crypto/: CMakeLists.txt  README.md
labev1_crypto/include/: util.h
proxy/: 95proxies  README.md  proxy_off  proxy_on
